--- a/orghtml/index.html
+++ b/orghtml/index.html
@@ -5,12 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>David Chu's China Bistro</title>
 <!--Href links-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--Fonts-->
     <link rel="stylesheet" class="css" href="\orgcss\styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="" href="">
+
+<!--Bootstraplinks--><!--Frameworks-->
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap-grid.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap-grid.min.css">
+<!--Bootstraplinksend-->>
 <!--Href links end-->
 </head>
 
@@ -51,7 +58,7 @@
       <div class="container" id="container1">
         <div class="navbar-header">
           <a href="index.html" class="">
-            <div id="logo-img" alt="LOGO IMG"><img src="\images\restaurant-logo.png"></div>
+            <div id="logo-img" alt="LOGO IMG"></div>
           </a>
 
           <div class="navbar-brand">
