--- a/orghtml/index.html
+++ b/orghtml/index.html
@@ -8,7 +8,7 @@
 <!--Fonts-->
     <link rel="stylesheet" class="css" href="\orgcss\styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="" href="">
 
@@ -17,10 +17,8 @@
 <link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap.min.css">
 <link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap-grid.css">
 <link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap-grid.min.css">
-<!--Bootstraplinksend-->>
+<!--Bootstraplinksend-->
 <!--Href links end-->
-</head>
-
 <!--jQuery (Bootstrap jS plugins *depend on it)-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -30,6 +28,28 @@
     <script src="js/script.js"></script>
 <!--END jQuery (Bootstrap JS plugins)-->
 
+</head>
+<body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container" id="container1">
+        <div class="navbar-header">
+          <a href="index.html" class="">
+            <div id="logo-img" alt="LOGO IMG"><img src="\images\restaurant-logo.png"></div>
+          </a>
+
+          <div class="navbar-brand">
+            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <p>
+              <img src="images/star-k-logo.png" alt="Kosher Certification">
+              <span>Kosher Certified</span>
+            </p>
+          </div>
+
+      </div>
+    </nav>
+  </header>
+<!--/body-->
 <!--browser-syncstart-->
 <script id="__bs_script__">//<![CDATA[
     (function() {
@@ -51,27 +71,5 @@
     })()
   //]]></script>
   <!--browsersyncend-->
-  <!--body-->
-<body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container" id="container1">
-        <div class="navbar-header">
-          <a href="index.html" class="">
-            <div id="logo-img" alt="LOGO IMG"></div>
-          </a>
-
-          <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
-            <p>
-              <img src="images/star-k-logo.png" alt="Kosher Certification">
-              <span>Kosher Certified</span>
-            </p>
-          </div>
-
-      </div>
-    </nav>
-  </header>
-<!--/body-->
 </body>
 </html>
