--- a/orghtml/index.html
+++ b/orghtml/index.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="" href="">
+    <link rel="blank" href="blank">
 
 <!--Bootstraplinks--><!--Frameworks-->
-<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap.css">
-<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap.min.css">
-<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap-grid.css">
-<link rel="stylesheet" href="bootstrap-5.3.3-dist\css\bootstrap-grid.min.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\bootstrap-5.3.3-dist\css\bootstrap.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\bootstrap-5.3.3-dist\css\bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\bootstrap-5.3.3-dist\css\bootstrap-grid.css">
+<link rel="stylesheet" href="bootstrap-5.3.3-dist\bootstrap-5.3.3-dist\css\bootstrap-grid.min.css">
 <!--Bootstraplinksend-->
 <!--Href links end-->
 <!--jQuery (Bootstrap jS plugins *depend on it)-->
@@ -34,18 +34,45 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container" id="container1">
         <div class="navbar-header">
-          <a href="index.html" class="">
-            <div id="logo-img" alt="LOGO IMG"><img src="\images\restaurant-logo.png"></div>
+          <a href="index.html" class="pull-left visible-md"><!--bootstrap selectors are not linked, wtf-->
+            <div id="logo-img" class="" alt="LOGO IMG"><img src="\images\restaurant-logo.png"></div>
           </a>
 
-          <div class="navbar-brand">
+          <div class="navbar-brand" alt="brand logo?">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher Certification">
               <span>Kosher Certified</span>
             </p>
           </div>
-
+          
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle Navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+      </div>
+        <div id="collpasable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html">
+                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+            </li>
+            <li id="phone" class="hidden-xs">
+              <a href="tel:410-602-5008">
+                <span>410-602-5008</span></a><div>We Deliver</div>
+            </li>
+          </ul><!-- #nav-list-->
+        </div><!-- .collapse .navbar-collapse-->
       </div>
     </nav>
   </header>
